# PLAZAAAAAAAAAAAAAAAAAAAAAAA

./: .clang-format  .codecov.yml  .gdb_history  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  _a_parser_8cpp.html  _a_parser_8cpp__incl.map  _a_parser_8cpp__incl.md5  _a_parser_8cpp_source.html  _a_parser_8hpp.html  _a_parser_8hpp__dep__incl.map  _a_parser_8hpp__dep__incl.md5  _a_parser_8hpp__incl.map  _a_parser_8hpp__incl.md5  _a_parser_8hpp_source.html  _arguments_parser_8cpp.html  _arguments_parser_8cpp__incl.map  _arguments_parser_8cpp__incl.md5  _arguments_parser_8cpp_source.html  _arguments_parser_8hpp.html  _arguments_parser_8hpp__dep__incl.map  _arguments_parser_8hpp__dep__incl.md5  _arguments_parser_8hpp__incl.map  _arguments_parser_8hpp__incl.md5  _arguments_parser_8hpp_source.html  _cook_8cpp.html  _cook_8cpp__incl.map  _cook_8cpp__incl.md5  _cook_8cpp_source.html  _cook_8hpp.html  _cook_8hpp__dep__incl.map  _cook_8hpp__dep__incl.md5  _cook_8hpp__incl.map  _cook_8hpp__incl.md5  _cook_8hpp_source.html  _exception_8cpp.html  (+350 more)
.github/workflows/: cmake.yml  mirroring.yml  unit_tests.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  (+55 more)
src/: CMakeLists.txt  main.cpp
src/Core/: Bonus.cpp  Bonus.hpp  CMakeLists.txt  Pizza.cpp  Pizza.hpp  Plazza.cpp  Plazza.hpp  pizza.h
src/Core/Cook/: CMakeLists.txt  Cook.cpp  Cook.hpp
src/Core/Kitchen/: CMakeLists.txt  Kitchen.cpp  Kitchen.hpp
src/Core/Parser/: AParser.cpp  AParser.hpp  CMakeLists.txt  IParser.hpp
src/Core/Parser/ArgumentsParser/: ArgumentsParser.cpp  ArgumentsParser.hpp
src/Core/Parser/InputParser/: InputParser.cpp  InputParser.hpp
src/Core/Pizza/: CMakeLists.txt  Pizza.cpp  Pizza.hpp
src/Kitchen/: CMakeLists.txt  Kitchen.cpp  Kitchen.hpp
src/Logger/: CMakeLists.txt  Exception.cpp  Exception.hpp  Logger.cpp  Logger.hpp  PizzaLogger.cpp  PizzaLogger.hpp
src/MessageQueue/: CMakeLists.txt  MessageQueue.cpp  MessageQueue.hpp
src/Parser/: AParser.cpp  AParser.hpp  CMakeLists.txt  IParser.hpp  InputParser.cpp  InputParser.hpp  Parser.cpp  Parser.hpp
src/Parser/ArgumentsParser/: ArgumentsParser.cpp  ArgumentsParser.hpp
src/Parser/InputParser/: InputParser.cpp  InputParser.hpp
src/cook/: CMakeLists.txt  Cook.cpp  Cook.hpp
src/logger/: CMakeLists.txt  Exception.cpp  Exception.hpp  Logger.cpp  Logger.hpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/Cook/: CMakeLists.txt  Cook_test.cpp
tests/unit_tests/Core/: CMakeLists.txt
tests/unit_tests/Kitchen/: CMakeLists.txt  Kitchen_test.cpp
tests/unit_tests/Logger/: CMakeLists.txt  Logger_test.cpp
tests/unit_tests/MessageQueue/: CMakeLists.txt  MessageQueue_test.cpp
tests/unit_tests/Parser/: CMakeLists.txt  InputParser_test.cpp  Parser_test.cpp
tests/unit_tests/Pizza/: CMakeLists.txt  Pizza_test.cpp
